updated the entire portfolio(fixted contact form, pdf resume download, and removed scrollbar effect)

--- a/css/default.css
+++ b/css/default.css
@@ -49,6 +49,7 @@ e. Others
  article, aside, canvas, details, figcaption, figure,
  footer, header, hgroup, menu, nav, section, summary,
  time, mark, audio, video {
+
     margin: 0;
     padding: 0;
     border: 0;
@@ -56,7 +57,19 @@ e. Others
     font-size: 100%;
     vertical-align: baseline;
     background: transparent;
+
  }
+
+ html::-webkit-scrollbar {
+    display: none;
+ }
+
+ html {
+    -ms-overflow-style: none !important;
+    scrollbar-width: none;
+ }
+
+
  
  article,aside,details,figcaption,figure,
  footer,header,hgroup,menu,nav,section {
@@ -169,6 +182,7 @@ e. Others
  h4 { font-size: 20px; line-height: 30px; margin-bottom: 6px; }
  h5 { font-size: 18px; line-height: 30px; }
  h6 { font-size: 14px; line-height: 30px; }
+ .subheader { }
  
  p { margin: 0 0 30px 0; }
  p img { margin: 0; }
@@ -312,7 +326,8 @@ e. Others
  ul ul li, ul ol li,
  ol ol li, ol ul li { margin-bottom: 6px; }
  li { line-height: 18px; margin-bottom: 12px; }
-
+ ul.large li { }
+ li p { }
  
  /* ---------------------------------------------------------------------
  /*  Stats Tab Markup
@@ -442,6 +457,7 @@ e. Others
     background-color: #E6E8EB;
     color: #A9ADB2;
  }
+ .pagination .prev, .pagination .next {}
  
  /*  5. Images  --------------------------------------------------------- */
  
@@ -536,6 +552,7 @@ e. Others
     margin: 0 0 24px 0;
     border: 0;
     outline: none;
+    vertical-align: middle;
     min-width: 225px;
     max-width: 100%;
     font-size: 15px;
@@ -796,4 +813,9 @@ e. Others
     margin-left: auto !important;
     margin-right: auto !important;
     text-align: center !important;
- } 
+ }
+ 
+ 
+ 
+ 
+ 
